--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Jcook894/Game#readme",
   "dependencies": {
     "@types/babel-core": "^6.25.2",
+    "node-sass": "^4.6.1",
     "typescript-compiler": "^1.4.1-2"
   }
 }
